@@ -1,12 +1,12 @@
 /*******************************************************************************
  * Copyright 2022 Amit Kumar Mondal
- * 
+ *
  * Licensed under the Apache License, Version 2.0 (the "License"); you may not
  * use this file except in compliance with the License.  You may obtain a copy
  * of the License at
- * 
+ *
  *   http://www.apache.org/licenses/LICENSE-2.0
- * 
+ *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
  * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  See the
@@ -147,7 +147,7 @@ public class FeatureExporter implements Exporter {
 
     private List<String> parseCategories(final String categories) throws IOException {
         if (categories == null) {
-            return Collections.emptyList();
+            return List.of();
         }
         return Splitter.on(PATTERN).splitToList(categories);
     }
